--- a/hwcontrol/WEB-INF/.project
+++ b/hwcontrol/WEB-INF/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>HWControl</name>
+	<name>Honeywell Control for Old Equipment</name>
 	<comment></comment>
 	<projects>
 	</projects>
